# xSHMEM

./: CMakeLists.txt  LICENSE.txt  README.txt  THIRD_PARTY_PROGRAMS.txt  hello_example.cpp  openshmem2.cpp  openshmem2_config.h.in  sycl_example.cpp  xSHMEM.cpp  xSHMEM.h
modules/: FindISHMEM.cmake  FindNVSHMEM.cmake  FindROCSHMEM.cmake  FindSHMEM.cmake
